--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,13 +8,13 @@ trigger:
 
 strategy:
   matrix:
-    linux:
+    jdk10_linux:
       imageName: "ubuntu-latest"
-    mac:
-      imageName: "macOS-latest"
-    windows:
+      jdkVersion: "1.10"
+    jdk11_windows:
       imageName: "windows-latest"
-  maxParallel: 3
+      jdkVersion: "1.11"
+  maxParallel: 2
 
 pool:
   vmImage: $(imageName)
